[gd_scene load_steps=2 format=3 uid="uid://ce1s35gk4lwbd"]

[ext_resource type="Script" path="res://Skriptid/levels.gd" id="1_kc7fl"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kc7fl")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_right = 69.0
offset_bottom = 31.0
text = "<-- Back
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 229.0
offset_right = 714.0
offset_bottom = 649.0

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tutorial
"

[node name="Testing" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Testing
"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Testing" to="." method="_on_testing_pressed"]
